--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   <body>
     <div class="reveal">
       <div class="slides">
+        <section id="s0" data-visibility="hidden">
+          <img
+            src="https://media.giphy.com/media/hScapv64LYdZe2YO26/giphy.gif"
+            alt="rotate phone"
+          />
+        </section>
         <section id="s1">
           <img
             data-src="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-01.jpg"
@@ -40,7 +46,7 @@
         <section
           id="s2"
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-02.jpg"
-          data-background-size="contain"
+          data-background-size="cover"
           data-background-position="center"
         ></section>
         <section
@@ -83,7 +89,7 @@
         <section
           id="s4"
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-04.jpg"
-          data-background-size="contain"
+          data-background-size="cover"
           data-background-position="center"
         ></section>
         <section id="s5" class="our-services" data-background-color="white">
@@ -111,19 +117,19 @@
         <section
           id="s6"
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-06.jpg"
-          data-background-size="contain"
+          data-background-size="cover"
           data-background-position="center"
         ></section>
         <section id="s7">
           <section
             id="sm-main"
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-07.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative2.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -132,89 +138,89 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative3.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative4.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative5.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative6.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative12.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative13.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative14.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative15.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative7.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative8.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative9.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative10.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative11.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative16.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative17.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative18.gif"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
         </section>
         <section id="s8">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-08.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section data-background-color="white">
@@ -282,7 +288,7 @@
         <section id="s9">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-09.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
@@ -329,7 +335,7 @@
         <section id="s10">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-10.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
@@ -369,12 +375,12 @@
         <section id="s11">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-11.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/BBA_interiar.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -385,24 +391,24 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/Interior-IMG_3477-HDR.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/Interior-IMG_3485-HDR.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/Samosa_Wall_01_Mock.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
         </section>
         <section id="s12">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-12.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
@@ -454,7 +460,7 @@
         <section id="s13">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-13.jpeg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section data-background-color="white">
@@ -725,12 +731,12 @@
         <section id="photography">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation_Photography.jpeg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_1.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -739,69 +745,69 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_2.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_3.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_4.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_5.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_6.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_7.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_8.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_9.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_10.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_11.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_12.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_13.jpg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
         </section>
         <section id="s21">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-21.jpeg"
-            data-background-size="contain"
+            data-background-size="cover"
             data-background-position="center"
           ></section>
           <section>
