website fullscreen and removed testimonials

--- a/index.html
+++ b/index.html
@@ -223,67 +223,55 @@
             data-background-size="cover"
             data-background-position="center"
           ></section>
-          <section data-background-color="white">
-            <h4 class="slide-title">Website</h4>
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Aaha_Web.png"
-              alt=""
-            />
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Aaha_Web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          >
+            <div class="r-stretch">
+              <h4 class="slide-title-fullscreen">Website</h4>
+            </div>
           </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Blisstree_Web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/BillyManik_Web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Connect&Impact_Web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/EIC_Web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/KayKay_web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Novita_Web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/OIH_Web.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup9.png"
-              alt=""
-            />
-          </section>
-          <section data-background-color="white">
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup10.png"
-              alt=""
-            />
-          </section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Blisstree_Web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/BillyManik_Web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Connect&Impact_Web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/EIC_Web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/KayKay_web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Novita_Web.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup9.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
+          <section
+            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup10.png"
+            data-background-size="cover"
+            data-background-position="center"
+          ></section>
         </section>
         <section id="s9">
           <section
@@ -803,26 +791,6 @@
             data-background-size="cover"
             data-background-position="center"
           ></section>
-        </section>
-        <section id="s21">
-          <section
-            data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-21.jpeg"
-            data-background-size="cover"
-            data-background-position="center"
-          ></section>
-          <section>
-            <h4 class="slide-title">Testimonial</h4>
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/testimonials/Debox_Deck_Presentation_Testimonials_v1.jpeg"
-              alt=""
-            />
-          </section>
-          <section>
-            <img
-              data-src="https://deboxconsulting.github.io/marketing-portfolio/images/testimonials/Debox_Deck_Presentation-26.jpeg"
-              alt=""
-            />
-          </section>
         </section>
         <section id="s14" data-background-color="white">
           <h4>Sucker for more?</h4>
