--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section
           id="s2"
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-02.jpg"
-          data-background-size="cover"
+          data-background-size="contain"
           data-background-position="center"
         ></section>
         <section
@@ -89,7 +89,7 @@
         <section
           id="s4"
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-04.jpg"
-          data-background-size="cover"
+          data-background-size="contain"
           data-background-position="center"
         ></section>
         <section id="s5" class="our-services" data-background-color="white">
@@ -117,19 +117,19 @@
         <section
           id="s6"
           data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-06.jpg"
-          data-background-size="cover"
+          data-background-size="contain"
           data-background-position="center"
         ></section>
         <section id="s7">
           <section
             id="sm-main"
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-07.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative2.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -138,94 +138,94 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative3.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative4.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative5.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative6.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative12.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative13.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative14.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative15.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative7.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative8.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative9.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative10.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative11.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative16.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative17.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/social_media/Social-Media-Creative18.gif"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
         </section>
         <section id="s8">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-08.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Aaha_Web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -234,49 +234,49 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Blisstree_Web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/BillyManik_Web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Connect&Impact_Web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/EIC_Web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/KayKay_web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Novita_Web.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup9.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/websites/Website_Mockup10.png"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
         </section>
         <section id="s9">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-09.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
@@ -323,7 +323,7 @@
         <section id="s10">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-10.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
@@ -363,12 +363,12 @@
         <section id="s11">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-11.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/BBA_interiar.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -379,24 +379,24 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/Interior-IMG_3477-HDR.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/Interior-IMG_3485-HDR.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/interior/Samosa_Wall_01_Mock.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
         </section>
         <section id="s12">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-12.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
@@ -448,7 +448,7 @@
         <section id="s13">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation-13.jpeg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section data-background-color="white">
@@ -719,12 +719,12 @@
         <section id="photography">
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/Debox_Deck_Presentation_Photography.jpeg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_1.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           >
             <div class="r-stretch">
@@ -733,62 +733,62 @@
           </section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_2.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_3.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_4.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_5.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_6.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_7.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_8.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_9.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_10.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_11.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_12.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
           <section
             data-background-image="https://deboxconsulting.github.io/marketing-portfolio/images/photography/Photography_13.jpg"
-            data-background-size="cover"
+            data-background-size="contain"
             data-background-position="center"
           ></section>
         </section>
@@ -825,7 +825,7 @@
       <button id="navigate-down">
         <img
           id="down-arrow"
-          src="https://deboxconsulting.github.io/marketing-portfolio/images/Arrow_Black.png"
+          src="https://deboxconsulting.github.io/marketing-portfolio/images/Arrow_Red.gif"
           alt=""
         />
       </button>
